--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>The Portfolio of Jesse Chase</title>
+    <title>The Portfolio of Mikail Huseynov</title>
     <meta name="description"
-          content="Jesse Chase is a product designer in New York City, currently Creative Director at DigitalOcean">
+          content="Hello, I'm Mikail Huseynov, web developer with 7 year experience.">
     <meta name="keywords" content="Jesse Chase, Product Designer, Creative Director, New York Product Designers">
 
     <meta name="twitter:card"
-          content="Jesse Chase is a product designer in New York City, currently Creative Director at DigitalOcean">
+          content="Hello, I'm Mikail Huseynov, web developer with 7 year experience.">
     <meta name="twitter:site" content="The Portfolio of Jesse Chase">
-    <meta name="twitter:title" content="The Portolio of Jesse Chase – Product Designer in NYC">
+    <meta name="twitter:title" content="The Portfolio of Mikail Huseynov - DevHub owner">
     <meta name="twitter:description"
-          content="Jesse Chase is a product designer in New York City, currently Creative Director at DigitalOcean">
+          content="Hello, I'm Mikail Huseynov, web developer with 7 year experience.">
 
-    <meta name="og:title" content="The Portolio of Jesse Chase – Product Designer in NYC">
+    <meta name="og:title" content="The Portfolio of Mikail Huseynov - DevHub owner">
     <meta name="og:description"
-          content="Jesse Chase is a product designer in New York City, currently Creative Director at DigitalOcean">
+          content="Hello, I'm Mikail Huseynov, web developer with 7 year experience.">
     <meta name="og:site_name" content="The Portfolio of Jesse Chase">
     <meta property="og:image" content='http://jessecha.se/assets/images/jesse-face-c1b5879b.png'>
     <meta property="og:image:width" content="500"/>
@@ -61,7 +61,7 @@
     <nav>
         <ul>
             <li><a class="active" href="/">Work</a></li>
-<!--            <li><a class="" href="/about/">About</a></li>-->
+            <li><a class="" href="about.html">About</a></li>
             <!-- <li></li> -->
         </ul>
     </nav>
@@ -227,10 +227,6 @@
         </nav>
     </footer>
 </div>
-
-<script>
-    $('Fade').animate({opacity: 1.0}, 2000);
-</script>
 
 </body>
 </html>
