--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <meta name="twitter:description"
           content="Jesse Chase is a product designer in New York City, currently Creative Director at DigitalOcean">
 
-    <meta name="og:title" content="The Portolio of Jesse Chase – Product Designer in NYC">
+    <meta name="og:title" content="The Portolio of Mikail Huseynov – Web Developer from Azerbaijan">
     <meta name="og:description"
           content="Jesse Chase is a product designer in New York City, currently Creative Director at DigitalOcean">
     <meta name="og:site_name" content="The Portfolio of Jesse Chase">
