--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>The Portfolio of Mikail Huseynov</title>
     <meta name="description"
           content="Hello, I'm Mikail Huseynov, web developer with 7 year experience.">
-    <meta name="keywords" content="Jesse Chase, Product Designer, Creative Director, New York Product Designers">
+    <meta name="keywords" content="Mikail Huseynov, Web developer, DevHub owner, Full-stack developer">
 
     <meta name="twitter:card"
           content="Hello, I'm Mikail Huseynov, web developer with 7 year experience.">
-    <meta name="twitter:site" content="The Portfolio of Jesse Chase">
+    <meta name="twitter:site" content="The Portfolio of Mikail Huseynov">
     <meta name="twitter:title" content="The Portfolio of Mikail Huseynov - DevHub owner">
     <meta name="twitter:description"
           content="Hello, I'm Mikail Huseynov, web developer with 7 year experience.">
@@ -19,8 +19,8 @@
     <meta name="og:title" content="The Portfolio of Mikail Huseynov - DevHub owner">
     <meta name="og:description"
           content="Hello, I'm Mikail Huseynov, web developer with 7 year experience.">
-    <meta name="og:site_name" content="The Portfolio of Jesse Chase">
-    <meta property="og:image" content='http://jessecha.se/assets/images/jesse-face-c1b5879b.png'>
+    <meta name="og:site_name" content="The Portfolio of Mikail Huseynov">
+    <meta property="og:image" content='https://avatars2.githubusercontent.com/u/30587167?s=460&u=ef769a3bb03d580b715396c2aeb4ba19ee1e2aa4&v=4'>
     <meta property="og:image:width" content="500"/>
     <meta property="og:image:height" content="292"/>
 
